# tensormesh

./: .gitignore  LICENSE  Makefile  README.md  mkdocs-base.yml  pyproject.toml  taplo.toml
docs/: gen_api_pages.py  gen_tutorials.py  index.md
docs/stylesheets/: extra.css
docs/tutorials/: getting_started.ipynb  motor_mesh.pt
src/tensormesh/: __init__.py  _frozen_dict.py  _pytree.py  batch.py  datasets.py  mesh.py  ops.py  plots.py
tests/: test_batch.py  test_compile.py  test_concat.py  test_datasets.py  test_mesh.py  test_ops.py  test_plots.py
